tapsi first version

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <section class="hero-section">
         <div>
-            <img src="assets\images\banner.webp" alt="banner">
+            <img src="assets\images\banner.webp" class="banner-img"alt="banner">
            </div>
            <div>
             <img src="assets/images/mockup-phone.webp" alt="banner" class="banner-phone">
